[package]

name = "zmq-explorers"
version = "0.0.1"
authors = [ "David Renshaw <david@sandstorm.io>" ]
license = "MIT"
description = "example usage of Cap'n Proto and ZeroMQ"
repository = "https://github.com/dwrensha/capnp-zmq-rust"
readme = "README.md"
build = "build.rs"

[[bin]]
name = "zmq-explorers"
path = "main.rs"

[build-dependencies]
capnpc = "0.1.25"

[dependencies]
capnp = "0.1.25"
time = "0.1.20"
libc = "0.1.1"
rand = "0.2.0"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[dependencies.capnp_zmq]
path = "../../"