[package]

name = "zmq-explorers"
version = "0.0.1"
authors = [ "David Renshaw <david@sandstorm.io>" ]
license = "MIT"
description = "example usage of Cap'n Proto and ZeroMQ"
repository = "https://github.com/dwrensha/capnp-zmq-rust"
readme = "README.md"
build = "build.rs"

[[bin]]
name = "zmq-explorers"
path = "main.rs"

[build-dependencies]
capnpc = "0.2.2"

[dependencies]
capnp = "0.2.2"
time = "0.1.25"
libc = "0.1.6"
rand = "0.3.8"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[dependencies.capnp-zmq]
path = "../../"